--- a/App.css
+++ b/App.css
@@ -118,6 +118,8 @@ body {
   margin-top: 60px;
   font-size: 20px;
   padding: 0px;
+  padding: 10px 0px;
+  height: 100%;
   border: none;
   color: white;
   background-color: #ffa700;
