--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -1,18 +1,67 @@
 body {
-    background-color: whitesmoke;
+    background: white;
+    background-image: radial-gradient(rgba(255, 200, 90, 50%) 1px, transparent 0);
+    background-size: 20px 20px;
+    background-position: -25px -25px;
 }
 
+
+.circle {
+    background-color: #FFC85A;
+    margin: 10px 0;
+    height:600px;
+    width:600px;
+    position: absolute;
+    top:-400px;
+    left: -100px;
+    box-sizing: border-box;
+}
+.circle::before {
+    content: "";
+    background-color: #FFC85A;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    top: 600px;
+    transform: rotate(45deg);
+    margin: auto;
+}
+.circle::after {
+    content: "";
+    background-color: #FFC85A;
+
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: -250px;
+    left:  50px;
+    margin: auto;
+    transform: rotate(10deg);
+}
+#circle2 {
+    position: absolute;
+    top: 1100px;
+    bottom: 0px;
+    left: 2000px;
+    right: 0px;
+    transform: rotate(220deg);
+}
 .RegisterMainContent {
     text-align: left;
     margin: auto;
-    width: 569px;
-    height: 724px;
+    margin-top: 25px;
+    width: 30%;
+    height: 100%;
     padding: 30px 60px;
     border: rgba(0,0,0,5%) solid 2px;
     border-radius: 30px;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
-    background-color: rgba(255, 255, 255, 1%);
+    background-color: rgba(255, 255, 255, 100%);
     color: #303030;
 }
 .RegisterMainContent p {
@@ -55,15 +104,16 @@ body {
     box-sizing: border-box;
 }
 
-.RegisterButton {
+#RegisterButton {
     margin-top: 60px;
     font-size: 20px;
     padding: 0px;
     padding: 10px 0px;
     height: 100%;
     border: none;
-    color: white;
     background-color: #FFC85A;
+    color: white;
+    font-weight: bold;
 }
 
 .RegisterMainContent a {
