--- a/frontend/src/styles/Register.css
+++ b/frontend/src/styles/Register.css
@@ -124,3 +124,15 @@ body {
 .Navbar img {
     height: 60px;
 }
+
+#loginheader {
+    margin-bottom: 25px;
+
+}
+
+#blob1 {
+    float: left;
+}
+#blob2 {
+    float: right;
+}
