--- a/frontend/src/styles/mainEvent.module.css
+++ b/frontend/src/styles/mainEvent.module.css
@@ -24,6 +24,17 @@
     gap: 0.75rem;
 }
 
+.buttons .active {
+    background-color: #eebc58;
+    color: #303040;
+    border-color: #eebc58;
+}
+
+.buttons .active:hover {
+    background-color: #eebc58;
+    border-color: #eebc58;
+}
+
 .buttons button {
     padding: 0.5rem 1.25rem;
     font-weight: 600;
@@ -54,12 +65,12 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+    text-decoration: none;
 }
 
 .profilePic {
     width: 56px;
     height: 56px;
-    background-color: blue;
     border-radius: 50%;
     object-fit: cover;
 }
